# advanced-crud-app

./: .env.example  Cargo.toml  readme.md
src/: main.rs
src/models/: user_model.rs
src/repositories/: mod.rs  repository_trait.rs  user_repository.rs
src/services/: service_trait.rs  user_service.rs
