[package]
name = "product_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"  # for web-server
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prettytable = "0.10.0"
# async-std (no TLS)
sqlx = { version = "0.7", features = [ "postgres", "runtime-async-std" ] }
dotenv = "0.15"
async-std= "1.12.0"
tokio = { version = "1.37.0", features = ["full"] }
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
